fim das estilizaçoes da section.add-item para o mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <i class="ph ph-arrow-left"></i>
             voltar
         </button>
-         <h1>compras da semana</h1>
+         <h1>Compras da semana</h1>
     </header>
 
     <main>
